--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint": "eslint src/*",
     "build": "rm -rf dist/* && babel src --out-dir dist --copy-files",
     "build-schema": "babel-node ./scripts/buildSchema.js",
-    "start": "rm -rf dist/* && babel src --out-dir dist --copy-files && node dist/index.js",
+    "start": "node dist/index.js",
     "watch": "nodemon src/index.js --exec babel-node --copy-files"
   }
 }
