--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "koa": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
-    "koa-graphql": "^0.6.0"
-  },
-  "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-eslint": "^7.0.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "koa-graphql": "^0.6.0"
+  },
+  "devDependencies": {
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.0.1",
@@ -43,7 +43,7 @@
     "eslint": "eslint src/*",
     "build": "rm -rf dist/* && babel src --out-dir dist --copy-files",
     "build-schema": "babel-node ./scripts/buildSchema.js",
-    "start": "rm -rf dist/* && babel src --out-dir dist --copy-files && node dist/index.js",
+    "start": "node dist/index.js",
     "watch": "nodemon src/index.js --exec babel-node --copy-files"
   }
 }
